force-app/main/default/objects/PMS_KPI_Fields__mdt.object
<CustomObject>
    <fields>
        <fullName>Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CustomLabel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CustomLabel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldAPI__c</fullName>
        <label>FieldAPI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldLabel__c</fullName>
        <label>FieldLabel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObjectAPI__c</fullName>
        <label>ObjectAPI</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Picklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TextArea__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TextArea</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserRole__c</fullName>
        <label>UserRole</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>PMS KPI Fields</label>
    <pluralLabel>PMS KPI Fields</pluralLabel>
</CustomObject>